Simplify JUnit 5.x dependencies and make JUnit 4.x optional

--- a/dropwizard-bom/pom.xml
+++ b/dropwizard-bom/pom.xml
@@ -596,6 +596,13 @@
                 <version>${junit.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>${junit5.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
                 <version>${mockito.version}</version>
