--- a/dropwizard-testing/pom.xml
+++ b/dropwizard-testing/pom.xml
@@ -32,11 +32,11 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>compile</scope>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit5.version}</version>
+            <artifactId>junit-jupiter</artifactId>
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
